--- a/2024_0718_SpringVisit/pom.xml
+++ b/2024_0718_SpringVisit/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.githrd</groupId>
-	<artifactId>db</artifactId>
+	<artifactId>visitapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
-	
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -27,26 +27,16 @@
 
 	<dependencies>
 
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-web 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>6.0.0</version>
-		</dependency>-->
-		
-		
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>5.0.0.RELEASE</version>
 		</dependency>
-
-<!--		
-		https://mvnrepository.com/artifact/org.springframework/spring-webmvc 
-		<dependency>
+		
+		<!--<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
+			<artifactId>spring-web</artifactId>
 			<version>6.0.0</version>
 		</dependency>-->
 
@@ -57,6 +47,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.0.0.RELEASE</version>
 		</dependency>
+		
+		<!--<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>6.0.0</version>
+		</dependency>-->
 
 
 		<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
@@ -83,6 +79,8 @@
 			<version>1.1.1</version>
 		</dependency>
 
+
+		<!--    mybatis 설정 -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -95,6 +93,7 @@
 			<version>1.2.0</version>
 		</dependency>
 
+		<!-- Transaction  -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
