--- a/2024_0720_Project2_DB/src/main/resources/config/mybatis/db.properties
+++ b/2024_0720_Project2_DB/src/main/resources/config/mybatis/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=oracle.jdbc.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:xe
-jdbc.username=project2
-jdbc.password=project2
+jdbc.username=test
+jdbc.password=test
