--- a/2024_0720_Project2_DB/pom.xml
+++ b/2024_0720_Project2_DB/pom.xml
@@ -108,6 +108,14 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240205</version>
+		</dependency>
+
 		
 
 
