--- a/2024_0729Auction/pom.xml
+++ b/2024_0729Auction/pom.xml
@@ -128,11 +128,20 @@
 			<version>20240205</version>
 		</dependency>
 
-		<!-- 새로고침 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.13.0</version>
+			<version>2.9.2</version>
 		</dependency>
 		
 
